// Bun Snapshot v1, https://bun.sh/docs/test/snapshots

exports[`typed material api client integration batch creates materials and snapshots get responses 1`] = `
{
  "E": 125000,
  "G": 85000,
  "id": "<db-id>",
  "revisionId": "<revision-id>",
  "units": {
    "pressure": "Pascal",
  },
}
`;

exports[`typed material api client integration batch creates materials and snapshots get responses 2`] = `
{
  "E": 101324.66370467292,
  "G": 101325,
  "id": "<db-id>",
  "revisionId": "<revision-id>",
  "units": {
    "pressure": "Pascal",
  },
}
`;

exports[`typed material api client integration batch creates materials and snapshots get responses 3`] = `
{
  "E": 96258.75,
  "G": 95000,
  "id": "<db-id>",
  "revisionId": "<revision-id>",
  "units": {
    "pressure": "Pascal",
  },
}
`;
